--- a/IsraelHiking.Web/sources/application/components/sidebar/sidebar.component.css
+++ b/IsraelHiking.Web/sources/application/components/sidebar/sidebar.component.css
@@ -38,7 +38,7 @@
 @media (max-width:500px) {
     #sidebar-wrapper {
         min-width: unset;
-        width: 100%;
+        width: 100vw;
         box-sizing: border-box;
     }
 }
